Track reactions to messages

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,1 +1,2 @@
-chat.header=Food and Friends is {0} ({1}). Click the button if you're coming and drop your food ideas below!
+chat.header=Food and Friends is next Tuesday at 6PM. Upvote the post if you're going and drop your food ideas below
+chat.body=**Attending:**\n{0}
